css/style.css
*{
    margin: 0px;
    padding: 0px;
    list-style-type: none;
    text-decoration: none;
}

header {
    margin: 5px;
    display: flex;
    flex-wrap: wrap;
    flex-basis: 100%;
    border: 1px solid #000000;
    background: #181A1E;
    border-radius: 5px;
}

a {
    color: rgb(255, 255, 255);
    border: 1px solid black;
}

a:hover
{
    color: rgb(255, 255, 255);
    border: 1px solid black;
}

nav ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

ul li {
    display: block;
    transition-duration: 0.5s;
}

section {
    display: flex;
    max-width: 70%;
    flex-wrap: wrap;
    padding: 10px;
    margin: 0px 0px 5px 0%;
    border: 1px solid rgb(0, 0, 0);
    border-radius: 5px;
}

footer {
    display: flex;
    flex-basis: 100%;
    flex-wrap: wrap;
    border: 1px solid rgb(0, 0, 0);
    border-radius: 5px;
    padding: 10px;
    margin: 5px;
    background: #181A1E;
}

p {
    border-radius: 5px;
}

/* en dessous toutes les class */

/* sidebar top / barre de navigation du haut */
.sidebar_top {
    display: block;
    background: #181A1E;
    border-top: 1px solid #000000;
    border-radius: 5px;
    width: 100%;
    max-width:  100%;
    text-transform: uppercase;
    padding: 10px;
}

/* boutons sidebar top */
.button {
    display: flex;
    justify-content: center;
    transition-duration: 0.4s;
    background-color: #151517;
    padding: 10px 25px;
    font-size: 1rem;
}

/* effets sur les boutons de la barre de navigation haute */
.button:hover {
    background: #4ec7f3;
    border: #000000;
}

/* margin right sidebar_top / marge droite pour les boutons de la sidebar du haut */
.margin_right {
    margin-right: 2px;
}

/* sideabar left / barre de navigation gauche */
.sidebar_left {
    display: block;
    float: left;
    margin: 0px 5px 0px 5px;
    padding: 10px 10px;
    border: 1px solid black;
    border-radius: 5px;
    width: 15%;
    height: 85%;
    max-height: 85%;
    background: #181A1E;
}

/* navigation sidebar gauche */
.nav_left {
    display: flex;
    justify-content: center;
    flex-direction: column;
    float: left;
    width: 100%;
    text-transform: uppercase;
}

/* boutons sidebar gauche */
.button_02 {
    display: flex;
    transition-duration: 0.4s;
    background-color: #151517;
    padding: 10px 5px;
    font-size: 1rem;
    border-radius: 5px;
    justify-content: center;
}

/* effets boutons sidebar left */
.button_02:hover {
    background: #4ec7f3;
    border: #000000;
}

/* marge bas de 2px sur les boutons de la suidebare gauche */
.margin_bottom {
    margin-bottom: 2px;
}

/* sideabar left / barre de droite */
.sidebar_right {
    display: block;
    float: right;
    margin: 0px 5px 0px 5px;
    padding: 10px 10px;
    border: 1px solid black;
    border-radius: 5px;
    width: 15%;
    height: 100%;
    color: rgba(0, 0, 0, 0.63);
}

/* header sideabar right / h1 header barre de droite */
.siderbar_right_header {
    color: #151517;
    text-align: center;
}

/* border bottom sidebar right / barre de droite */
.border_bottom {
    width: 100%;
    margin: 5px 0px 5px 0px;
    border-bottom: 1px solid #000000;
}


/* sidebar right id > p */
#p_siderbar_right {
    color: rgb(0, 0, 0);
}

#info {
    background:#4ec7f3;
}

#p_info {
    color: rgb(255, 255, 255);
    text-shadow: 1px 1px 2px rgb(0, 0, 0);
}

/* section title */
.title_section {
    display: flex;
    justify-content: flex-start;
    font-size: 1.1rem;
    text-transform: uppercase;
    color: rgb(255, 255, 255);
    text-shadow: 1px 1px 2px rgb(0, 0, 0);
}

/* section img */
.img_section {
    display: inline-flex;
    width: 150px;
    height: 80px;
    margin: 5px 0px 10px 5px;
}

.img_box {
    display: flex;
    justify-content: flex-start;
    flex-basis: 100%;
    width: 100%;
    height: 20%;
}

.img_box_02{
    display: flex;
    justify-content: flex-end;
    flex-basis: 100%;
    width: 100%;
    height: 20%;
}

/* footer */
.footer {
    display: flex;
    flex-basis: 100%;
}

/* footer copyright */
.copyright {
    padding: 15px;
    display: flex;
    flex-basis: 100%;
    justify-content: center;
    color: rgb(255, 255, 255);
    background: #181A1E;
}

/* footer heart / coeur du bas de page */
.heart {
    color: #DC143C;
}

